# amburana

./: .gitmodules  ChangeLog  Makefile.am  Makefile.in  README  README.md  biomcmc-lib  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
minimap2/: Makefile.in  align.c  example.c  ksw2.h  minimap.h
recipe/: amburana.def
src/: .clustering_affineprop.c.swp  Makefile.am  Makefile.in  __unused.c  amburana.h  clustering_affineprop.c  clustering_affineprop.h  clustering_hierarchical.c  clustering_hierarchical.h  clustering_lancewilliams.c  config.h.in~  general_heap.h  goptics_cluster.c  goptics_cluster.h  kseq.h  kseq_old.h  main.c  minhash.c  minhash.c.bkp  minhash.h  minhash.h.bkp  simple_heap.c  simple_heap.h  sketch_distance.c  sketch_distance.h
tests/: Makefile.am  Makefile.in  check_simpleheap.c  check_unit.c  debug_gopt_affine.c  debug_hierarch_goptics.c  debug_pairwise_dists.c
tests/files/: bacteria_riboprot.fasta  small.fasta
